--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/BookmarkPolicy.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/BookmarkPolicy.adoc
@@ -11,6 +11,8 @@ enum BookmarkPolicy {
   AS_CHILD     // <.>
   NEVER     // <.>
   NOT_SPECIFIED     // <.>
+  boolean isRoot()
+  boolean isChild()
 }
 ----
 
