--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/CollectionLayout.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/CollectionLayout.adoc
@@ -18,7 +18,7 @@ Layout hints for collections.
   String sequence() default "";     // <.>
   @SuppressWarnings("rawtypes")
 Class<? extends Comparator> sortedBy() default Comparator.class;     // <.>
-  TableDecoration tableDecoration() default TableDecoration.NOT_SPECIFIED;     // <.>
+  Class<? extends TableDecorator> tableDecorator() default TableDecorator.Default.class;     // <.>
 }
 ----
 
@@ -62,7 +62,7 @@ The order of this member relative to other members in the same (layout) group, g
 --
 Indicates that the elements in a ( _java.util.SortedSet_ ) collection should be sorted according to a different order than the natural sort order, as defined by the specified _java.util.Comparator_ .
 --
-<.> xref:#tableDecoration[tableDecoration]
+<.> xref:#tableDecorator[tableDecorator]
 +
 --
 Whether a parented collection when represented in a table form should additionally be "decorated" with client-side (javascript) enhancements, for example to enable paging and filtering.
@@ -130,8 +130,8 @@ However, in some circumstances the ordering of collection may be different to th
 
 The purpose of this annotation is to provide a _java.util.Comparator_ such that the collection may be sorted in an order more suitable to the context.
 
-[#tableDecoration]
-=== tableDecoration
+[#tableDecorator]
+=== tableDecorator
 
 Whether a parented collection when represented in a table form should additionally be "decorated" with client-side (javascript) enhancements, for example to enable paging and filtering.
 
