--- a/antora/components/refguide-index/modules/applib/pages/index/layout/component/CollectionLayoutData.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/layout/component/CollectionLayoutData.adoc
@@ -27,8 +27,8 @@ class CollectionLayoutData {
   void setPaged(Integer paged)
   String getSortedBy()
   void setSortedBy(String sortedBy)
-  TableDecoration getTableDecoration()
-  void setTableDecoration(TableDecoration tableDecoration)
+  Class<? extends TableDecorator> getTableDecorator()
+  void setTableDecorator(Class<? extends TableDecorator> tableDecorator)
   List<ActionLayoutData> getActions()
   void setActions(List<ActionLayoutData> actionLayoutDatas)
   CollectionLayoutDataOwner getOwner()     // <.>
