--- a/antora/components/refguide-index/modules/valuetypes/pages/index/asciidoc/applib/CausewayModuleValAsciidocApplib.adoc
+++ b/antora/components/refguide-index/modules/valuetypes/pages/index/asciidoc/applib/CausewayModuleValAsciidocApplib.adoc
@@ -8,6 +8,7 @@
 ----
 class CausewayModuleValAsciidocApplib {
   public static final String NAMESPACE;
+  AdocToHtmlConverter createAdocToHtmlConverter(CausewayConfiguration config)
 }
 ----
 
