--- a/incubator/clients/kroviz/adoc/modules/kroviz/partials/design/sample_plantuml.adoc
+++ b/incubator/clients/kroviz/adoc/modules/kroviz/partials/design/sample_plantuml.adoc
@@ -17,7 +17,7 @@ PropertyHiddenChildVm : propertyHiddenReferencesParent
 PropertyHiddenChildVm : clearHints()
 PropertyHiddenChildVm : recentCommands()
 PropertyHiddenChildVm : inspectMetamodel()
-PropertyHiddenChildVm : downloadLayoutXml()
+PropertyHiddenChildVm : downloadLayout()
 PropertyHiddenChildVm : openRestApi()
 PropertyHiddenChildVm : downloadMetamodelXml()
 PropertyHiddenChildVm : rebuildMetamodel()
@@ -43,7 +43,7 @@ JodaLocalDateTimeJdo : clearHints()
 JodaLocalDateTimeJdo : updateReadOnlyProperty()
 JodaLocalDateTimeJdo : recentCommands()
 JodaLocalDateTimeJdo : inspectMetamodel()
-JodaLocalDateTimeJdo : downloadLayoutXml()
+JodaLocalDateTimeJdo : downloadLayout()
 JodaLocalDateTimeJdo : downloadJdoMetadata()
 JodaLocalDateTimeJdo : openRestApi()
 JodaLocalDateTimeJdo : downloadMetamodelXml()
