--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/DomainObject.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/DomainObject.adoc
@@ -210,10 +210,16 @@ Supporting methods are then derived from that method name. For example, if the m
 
 Typical examples are "act", "prop", "coll", "exec", "execute", "invoke", "apply" and so on. The default name is `$$`.
 
+ *NOTE* : it's more typical to instead use xref:refguide:applib:index/annotation/Action.adoc[Action] , xref:refguide:applib:index/annotation/Property.adoc[Property] or xref:refguide:applib:index/annotation/Collection.adoc[Collection] as the class-level annotation, indicating that the domain object is a mixin. The mixin method name for these is, respectively, "act", "prop" and "coll".
+
 [#nature]
 === nature
 
 The nature of this domain object.
+
+Most common are natures of _Nature#ENTITY_ and _Nature#VIEW_MODEL_ . For mixins, rather than use a nature of _Nature#MIXIN_ , it's more typical to instead use xref:refguide:applib:index/annotation/Action.adoc[Action] , xref:refguide:applib:index/annotation/Property.adoc[Property] or xref:refguide:applib:index/annotation/Collection.adoc[Collection] as the class-level annotation, indicating that the domain object is a mixin. The _#mixinMethod() mixin method name_ for these is, respectively, "act", "prop" and "coll".
+
+The _Nature#BEAN_ nature is for internally use, and should not normally be specified explicitly.
 
 [#logicalTypeName]
 === logicalTypeName
