--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/DomainObjectLayout.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/DomainObjectLayout.adoc
@@ -16,8 +16,9 @@ Layout hints for domain objects.
   String describedAs() default "";     // <.>
   String named() default "";     // <.>
   int paged() default -1;     // <.>
-  String plural() default "";     // <.>
-  TableDecoration tableDecoration() default TableDecoration.NOT_SPECIFIED;     // <.>
+  @Deprecated(forRemoval = true)
+String plural() default "";     // <.>
+  Class<? extends TableDecorator> tableDecorator() default TableDecorator.Default.class;     // <.>
   Class<? extends CssClassUiEvent<?>> cssClassUiEvent() default CssClassUiEvent.Default.class;     // <.>
   Class<? extends IconUiEvent<?>> iconUiEvent() default IconUiEvent.Default.class;     // <.>
   Class<? extends LayoutUiEvent<?>> layoutUiEvent() default LayoutUiEvent.Default.class;     // <.>
@@ -63,12 +64,19 @@ The page size for instances of this class when rendered within a table.
 <.> xref:#plural[plural]
 +
 --
+[WARNING]
+====
+[red]#_deprecated:_#
+
+CAUSEWAY-3321: for standalone tables (action result), parented tables (collections) or plural action parameters, the framework should (and will) use the name of the originating action, collection or action parameter instead.
+====
+
 The plural name of the class.
 --
-<.> xref:#tableDecoration[tableDecoration]
+<.> xref:#tableDecorator[tableDecorator]
 +
 --
-Whether a standalone collection when represented in a table form should additionally be "decorated" with client-side (javascript) enhancements, for example to enable paging and filtering.
+Whether a standalone collection, when represented in a table form, should additionally be "decorated" with client-side (javascript) enhancements, for example to enable paging and filtering.
 --
 <.> xref:#cssClassUiEvent[cssClassUiEvent]
 +
@@ -139,12 +147,19 @@ If annotated on a type, then the page size refers to standalone collections (eg 
 [#plural]
 === plural
 
+[WARNING]
+====
+[red]#_deprecated:_#
+
+CAUSEWAY-3321: for standalone tables (action result), parented tables (collections) or plural action parameters, the framework should (and will) use the name of the originating action, collection or action parameter instead.
+====
+
 The plural name of the class.
 
-[#tableDecoration]
-=== tableDecoration
+[#tableDecorator]
+=== tableDecorator
 
-Whether a standalone collection when represented in a table form should additionally be "decorated" with client-side (javascript) enhancements, for example to enable paging and filtering.
+Whether a standalone collection, when represented in a table form, should additionally be "decorated" with client-side (javascript) enhancements, for example to enable paging and filtering.
 
 [#cssClassUiEvent]
 === cssClassUiEvent
