--- a/antora/components/refguide-index/modules/applib/pages/index/layout/grid/GridAbstract.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/layout/grid/GridAbstract.adoc
@@ -15,6 +15,8 @@ class GridAbstract {
   void setDomainClass(Class<?> domainClass)
   String getTnsAndSchemaLocation()
   void setTnsAndSchemaLocation(String tnsAndSchemaLocation)
+  boolean isFallback()
+  void setFallback(boolean fallback)
   boolean isNormalized()
   void setNormalized(boolean normalized)
   LinkedHashMap<String, PropertyLayoutData> getAllPropertiesById()
