--- a/antora/components/refguide/modules/applib-classes/pages/mixees-and-mixins.adoc
+++ b/antora/components/refguide/modules/applib-classes/pages/mixees-and-mixins.adoc
@@ -18,7 +18,7 @@ See the xref:userguide:fun:overview.adoc#mixins[user guide] for a discussion of 
 The framework provides a number of mixins that contributes to `java.lang.Object` (in other words, to every domain object):
 
 * Layout
-** xref:refguide:applib:index/mixins/layout/Object_downloadLayoutXml.adoc[Object_downloadLayoutXml]
+** xref:refguide:applib:index/mixins/layout/Object_downloadLayout.adoc[Object_downloadLayout]
 
 * Metamodel
 ** xref:refguide:applib:index/mixins/metamodel/Object_downloadMetamodelXml.adoc[Object_downloadMetamodelXml]
