--- a/antora/components/refguide/modules/applib-classes/partials/module-nav.adoc
+++ b/antora/components/refguide/modules/applib-classes/partials/module-nav.adoc
@@ -28,7 +28,7 @@
 
 ** xref:applib-classes:mixees-and-mixins.adoc[Mixees and Mixins]
 
-*** xref:applib:index/mixins/layout/Object_downloadLayoutXml.adoc[Object_downloadLayoutXml]
+*** xref:applib:index/mixins/layout/Object_downloadLayout.adoc[Object_downloadLayout]
 
 *** xref:refguide:applib:index/mixins/metamodel/Object_downloadMetamodelXml.adoc[Object_downloadMetamodelXml]
 *** xref:applib:index/mixins/metamodel/Object_rebuildMetamodel.adoc[Object_rebuildMetamodel]
