--- a/core/config/src/main/adoc/modules/config/pages/sections/causeway.value-types.adoc
+++ b/core/config/src/main/adoc/modules/config/pages/sections/causeway.value-types.adoc
@@ -12,192 +12,23 @@ include::../section-hooks/causeway.value-types~pre.adoc[]
 |Default
 |Description
 |
-[[causeway.value-types.java-lang.byte.format]]
-causeway.value-types.java-lang.byte. +
-format
+[[causeway.value-types.kroki.backend-url]]
+causeway.value-types.kroki. +
+backend-url
 
-|
-| Configures the number format understood by ``ByteValueSemanticsProviderAbstract``. @deprecated
+| 
+| If set, adds plantuml support to the AsciiDoc value type.
 
-
-|
-[[causeway.value-types.java-lang.double.format]]
-causeway.value-types.java-lang.double. +
-format
-
-|
-| Configures the number format understood by ``DoubleValueSemanticsProviderAbstract``. @deprecated
+Eg. via docker instance like \{@literal yuzutech/kroki}.
 
 
 |
-[[causeway.value-types.java-lang.float.format]]
-causeway.value-types.java-lang.float. +
-format
+[[causeway.value-types.kroki.request-timeout]]
+causeway.value-types.kroki. +
+request-timeout
 
-|
-| Configures the number format understood by ``FloatValueSemanticsProviderAbstract``. @deprecated
-
-
-|
-[[causeway.value-types.java-lang.long.format]]
-causeway.value-types.java-lang.long. +
-format
-
-|
-| Configures the number format understood by ``LongValueSemanticsProviderAbstract``. @deprecated
-
-
-|
-[[causeway.value-types.java-lang.short.format]]
-causeway.value-types.java-lang.short. +
-format
-
-|
-| Configures the number format understood by ``ShortValueSemanticsProviderAbstract``. @deprecated
-
-
-|
-[[causeway.value-types.java-math.big-decimal.format]]
-causeway.value-types.java-math. +
-big-decimal.format
-
-|
-| Configures the number format understood by ``BigDecimalValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-math.big-integer.format]]
-causeway.value-types.java-math. +
-big-integer.format
-
-|
-| Configures the number format understood by ``BigIntegerValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-sql.date.format]]
-causeway.value-types.java-sql.date. +
-format
-
-|  medium
-| Configures the formats understood by ``JavaSqlDateValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-sql.time.format]]
-causeway.value-types.java-sql.time. +
-format
-
-|  short
-| Configures the formats understood by ``JavaSqlTimeValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-sql.timestamp.format]]
-causeway.value-types.java-sql. +
-timestamp.format
-
-|  short
-| Configures the formats understood by ``JavaSqlTimeStampValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-time.local-date-time.format]]
-causeway.value-types.java-time. +
-local-date-time.format
-
-|  medium
-| Configures the formats understood by ``LocalDateTimeValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-time.local-date.format]]
-causeway.value-types.java-time. +
-local-date.format
-
-|  medium
-| Configures the formats understood by ``LocalDateValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-time.local-time.format]]
-causeway.value-types.java-time. +
-local-time.format
-
-|  medium
-| Configures the formats understood by ``LocalTimeValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-time.offset-date-time.format]]
-causeway.value-types.java-time. +
-offset-date-time.format
-
-|  medium
-| Configures the formats understood by ``OffsetDateTimeValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-time.offset-time.format]]
-causeway.value-types.java-time. +
-offset-time.format
-
-|  medium
-| Configures the formats understood by ``OffsetTimeValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-time.zoned-date-time.format]]
-causeway.value-types.java-time. +
-zoned-date-time.format
-
-|  medium
-| Configures the formats understood by ``ZonedDateTimeValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.java-util.date.format]]
-causeway.value-types.java-util.date. +
-format
-
-|  medium
-| Configures the formats understood by ``JavaUtilDateValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.joda.date-time.format]]
-causeway.value-types.joda.date-time. +
-format
-
-|  medium
-| Configures the formats understood by ``JodaDateTimeValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.joda.local-date-time.format]]
-causeway.value-types.joda. +
-local-date-time.format
-
-|  medium
-| Configures the formats understood by ``JodaLocalDateTimeValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.joda.local-date.format]]
-causeway.value-types.joda.local-date. +
-format
-
-|  medium
-| Configures the formats understood by ``JodaLocalDateValueSemanticsProvider``. @deprecated
-
-
-|
-[[causeway.value-types.primitives.int.format]]
-causeway.value-types.primitives.int. +
-format
-
-|
-| Configures the number format understood by ``IntValueSemanticsProviderAbstract``. @deprecated
+|  5000ms
+| Max time for requests to the ``#getBackendUrl()``, when waiting for a response. (default: 5 seconds)
 
 
 
