CAUSEWAY-3222: regen refguide index

--- a/antora/components/refguide-index/modules/applib/pages/index/mixins/layout/Object_downloadLayout.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/mixins/layout/Object_downloadLayout.adoc
@@ -39,3 +39,5 @@ Defaults to the (simple) name of the domain object's class, with a `.layout` suf
 === default1Act()
 
 Default style is _LayoutExportStyle#MINIMAL_ .
+
+include::hooks/Object_downloadLayout_see-also.adoc[]
