--- a/antora/components/refguide-index/modules/extensions/pages/index/executionlog/applib/spiimpl/ExecutionSubscriberForExecutionLog.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/executionlog/applib/spiimpl/ExecutionSubscriberForExecutionLog.adoc
@@ -7,6 +7,7 @@
 .ExecutionSubscriberForExecutionLog.java
 ----
 class ExecutionSubscriberForExecutionLog {
+  boolean isEnabled()
   void onExecution(Execution<?, ?> execution)
 }
 ----
